@@ -277,8 +277,7 @@ public:
     // Returned value : true if pagebreak was modified, false otherwise
     // Usage : while (container->AdjustPagebreak(&p)) {}
     virtual bool AdjustPagebreak(int *pagebreak,
-                                 int *known_pagebreaks = NULL,
-                                 int number_of_pages = 0) const;
+                                 wxArrayInt& known_pagebreaks) const;
 
     // Sets cell's behaviour on pagebreaks (see AdjustPagebreak). Default
     // is true - the cell can be split on two pages
@@ -411,7 +410,8 @@ public:
                       wxHtmlRenderingInfo& info);
     virtual void DrawInvisible(wxDC& dc, int x, int y,
                                wxHtmlRenderingInfo& info);
-    virtual bool AdjustPagebreak(int *pagebreak, int *known_pagebreaks = NULL, int number_of_pages = 0) const;
+/*    virtual bool AdjustPagebreak(int *pagebreak, int *known_pagebreaks = NULL, int number_of_pages = 0) const;*/
+    virtual bool AdjustPagebreak(int *pagebreak, wxArrayInt& known_pagebreaks) const;
 
     // insert cell at the end of m_Cells list
     void InsertCell(wxHtmlCell *cell);
